--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -524,7 +524,7 @@
 	"call": "إجراءإتصال",
 	"chat": "دردشة",
 	"customerDetail": "تفاصيل العميل",
-	"delivered": "تم التوصيل",
+	"delivered": "اكتمل",
 	"deliveryDetails": "تفاصيل التسليم",
 	"fullName": "الاسم الكامل",
 	"incorrectPassword": "عذراً، كلمة المرور غير صحيحة",
