--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -528,7 +528,7 @@
 	"deliveryDetails": "تفاصيل التسليم",
 	"fullName": "الاسم الكامل",
 	"incorrectPassword": "عذراً، كلمة المرور غير صحيحة",
-	"markAsShipped": "وضع علامة قد تم الشحن",
+	"markAsShipped": "وضع علامة قد اكتمل",
 	"productCreateReview": "سيظهر منتجك على التطبيق بعد مراجعته، شكراً لك",
 	"shipped": "تم شحن الطلبية",
 	"storeInformation": "معلومات المتجر",
