--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -513,7 +513,7 @@
 	"markAsRead": "Mark as read",
 	"markAsUnread": "Mark as unread",
 	"noFileToDownload": "No file to download.",
-	"orderStatusShipped": "Shipped",
+	"orderStatusShipped": "Completed",
 	"orderStatusReversed": "Reversed",
 	"orderStatusCanceledReversal": "Canceled Reversal",
 	"orderStatusChargeBack": "Charge Back",
@@ -531,7 +531,7 @@
 	"updatePassword": "Update password",
 	"customerDetail": "Customer detail",
 	"storeInformation": "Store Information",
-	"markAsShipped": "Mark as shipped",
+	"markAsShipped": "Mark as Completed",
 	"shipped": "Shipped",
 	"productCreateReview": "Your product will show up after review.",
 	"postSuccessfully": "Your post has been created succesfully",
