--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -52,7 +52,7 @@
 	"goBackToShipping": "العودة إلى الشحن",
 	"goBackToReview": "العودة للمراجعة",
 	"address": "العنوان",
-	"shippingAddress": "عنوان الشحن",
+	"shippingAddress": "عنوان الوصول",
 	"orderDetail": "تفاصيل الطلبية",
 	"subtotal": "الإجمالي الفرعي",
 	"total": "الإجمالي",
@@ -513,12 +513,12 @@
 	"refundOrderSuccess": "تم تعيين طلب استرداد المبلغ الخاص بالطلبية الخاصة بك بنجاح!",
 	"noFileToDownload": "عذراً، لا يوجد ملف لتحميله",
 	"orderStatusCanceledReversal": "إلغاء الطلبية",
-	"orderStatusChargeBack": "إعادة الشحن",
+	"orderStatusChargeBack": "إعادة العمل",
 	"orderStatusDenied": "مرفوضة",
 	"orderStatusExpired": "منتهية الصلاحية",
 	"orderStatusProcessed": "تمت المعالجة",
 	"orderStatusReversed": "تم الإلغاء",
-	"orderStatusShipped": "تم الشحن",
+	"orderStatusShipped": "اكتمل ",
 	"orderStatusVoided": "الطلبية باطلة/ملغاة",
 	"assigned": "تم تعيين الطلبية",
 	"call": "إجراءإتصال",
